--- a/TPHotel.Entidades/TPHotel.Entidades.csproj
+++ b/TPHotel.Entidades/TPHotel.Entidades.csproj
@@ -41,9 +41,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ClientePersona.cs" />
     <Compile Include="Cliente.cs" />
+    <Compile Include="Habitacion.cs" />
+    <Compile Include="HotelEntidad.cs" />
+    <Compile Include="Persona.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Reserva.cs" />
     <Compile Include="TransactionResult.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
