--- a/TPHotel.Negocio/TPHotel.Negocio.csproj
+++ b/TPHotel.Negocio/TPHotel.Negocio.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{5FFA5A6D-533E-4894-8633-D43587DE2046}</ProjectGuid>
+    <ProjectGuid>{5A2148D1-710A-484F-921D-5F3681661168}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>TPHotel.AccesoDatos</RootNamespace>
-    <AssemblyName>TPHotel.AccesoDatos</AssemblyName>
+    <RootNamespace>TPHotel.Negocio</RootNamespace>
+    <AssemblyName>TPHotel.Negocio</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -31,9 +31,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.13.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -44,17 +41,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ClienteDatos.cs" />
-    <Compile Include="HotelDatos.cs" />
-    <Compile Include="PersonaDatos.cs" />
+    <Compile Include="HotelNegocio.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ReservaDatos.cs" />
-    <Compile Include="Utilidades\WebHelper.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
+    <ProjectReference Include="..\TPHotel.AccesoDatos\TPHotel.AccesoDatos.csproj">
+      <Project>{5ffa5a6d-533e-4894-8633-d43587de2046}</Project>
+      <Name>TPHotel.AccesoDatos</Name>
+    </ProjectReference>
     <ProjectReference Include="..\TPHotel.Entidades\TPHotel.Entidades.csproj">
       <Project>{36c6272c-c5d8-4ccc-ba34-3da2c4615c0d}</Project>
       <Name>TPHotel.Entidades</Name>
