Se completan entidades y sus datos
Se completan las entidades y sus métodos asociados para conectarse con la API

--- a/TPHotel.AccesoDatos/TPHotel.AccesoDatos.csproj
+++ b/TPHotel.AccesoDatos/TPHotel.AccesoDatos.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ClienteDatos.cs" />
+    <Compile Include="HabitacionDatos.cs" />
     <Compile Include="HotelDatos.cs" />
     <Compile Include="PersonaDatos.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
