--- a/TPHotel.AccesoDatos/TPHotel.AccesoDatos.csproj
+++ b/TPHotel.AccesoDatos/TPHotel.AccesoDatos.csproj
@@ -61,5 +61,8 @@
       <Name>TPHotel.Entidades</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
