Agrego mas formularios
Nuevas funcionalidades

--- a/TPHotel.Entidades/TPHotel.Entidades.csproj
+++ b/TPHotel.Entidades/TPHotel.Entidades.csproj
@@ -42,9 +42,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Cliente.cs" />
+    <Compile Include="Excepciones\CantidadDeHuespedesMayorAlLaPermitidaException.cs" />
     <Compile Include="Excepciones\ErrorEnTransaccionExcepcion.cs" />
     <Compile Include="Excepciones\EstrellasFueraDeRangoExcepcion.cs" />
     <Compile Include="Excepciones\IdIgualCeroExcepcion.cs" />
+    <Compile Include="Excepciones\IdInexistenteException.cs" />
     <Compile Include="Habitacion.cs" />
     <Compile Include="HotelEntidad.cs" />
     <Compile Include="Persona.cs" />
