--- a/TPHotel.InterfazFormuario/TPHotel.InterfazFormuario.csproj
+++ b/TPHotel.InterfazFormuario/TPHotel.InterfazFormuario.csproj
@@ -72,6 +72,12 @@
     <Compile Include="FrmDeseaAgregarClienteNuevo.Designer.cs">
       <DependentUpon>FrmDeseaAgregarClienteNuevo.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmInformes.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmInformes.Designer.cs">
+      <DependentUpon>FrmInformes.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrmPrincipal.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -109,6 +115,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FrmDeseaAgregarClienteNuevo.resx">
       <DependentUpon>FrmDeseaAgregarClienteNuevo.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmInformes.resx">
+      <DependentUpon>FrmInformes.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmIngresarReservas.resx">
       <DependentUpon>FrmIngresarReservas.cs</DependentUpon>
