--- a/TPHotel.InterfazFormuario/TPHotel.InterfazFormuario.csproj
+++ b/TPHotel.InterfazFormuario/TPHotel.InterfazFormuario.csproj
@@ -110,6 +110,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Proximamente.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Proximamente.Designer.cs">
+      <DependentUpon>Proximamente.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="FrmAltaHabitaciones.resx">
       <DependentUpon>FrmAltaHabitaciones.cs</DependentUpon>
     </EmbeddedResource>
@@ -150,6 +156,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="Proximamente.resx">
+      <DependentUpon>Proximamente.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -184,6 +193,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\uno dos tres cuatro.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\prox.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
