--- a/TPHotel.InterfazFormuario/TPHotel.InterfazFormuario.csproj
+++ b/TPHotel.InterfazFormuario/TPHotel.InterfazFormuario.csproj
@@ -48,29 +48,29 @@
   <ItemGroup>
     <Compile Include="Clase validadora\CombinadoraDeControles.cs" />
     <Compile Include="Clase validadora\Validador.cs" />
-    <Compile Include="FrmAltaHabitaciones.cs">
+    <Compile Include="FrmsAltas\FrmAltaHabitacion.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FrmAltaHabitaciones.Designer.cs">
-      <DependentUpon>FrmAltaHabitaciones.cs</DependentUpon>
+    <Compile Include="FrmsAltas\FrmAltaHabitacion.Designer.cs">
+      <DependentUpon>FrmAltaHabitacion.cs</DependentUpon>
     </Compile>
-    <Compile Include="FrmAltaHoteles.cs">
+    <Compile Include="FrmsAltas\FrmAltaHotel.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FrmAltaHoteles.Designer.cs">
-      <DependentUpon>FrmAltaHoteles.cs</DependentUpon>
+    <Compile Include="FrmsAltas\FrmAltaHotel.Designer.cs">
+      <DependentUpon>FrmAltaHotel.cs</DependentUpon>
     </Compile>
-    <Compile Include="FrmConsultaReserva.cs">
+    <Compile Include="FrmsConsultas\FrmConsultaReserva.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FrmConsultaReserva.Designer.cs">
+    <Compile Include="FrmsConsultas\FrmConsultaReserva.Designer.cs">
       <DependentUpon>FrmConsultaReserva.cs</DependentUpon>
     </Compile>
-    <Compile Include="FrmConsultarHoteles.cs">
+    <Compile Include="FrmsConsultas\FrmConsultarHabitaciones.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FrmConsultarHoteles.Designer.cs">
-      <DependentUpon>FrmConsultarHoteles.cs</DependentUpon>
+    <Compile Include="FrmsConsultas\FrmConsultarHabitaciones.Designer.cs">
+      <DependentUpon>FrmConsultarHabitaciones.cs</DependentUpon>
     </Compile>
     <Compile Include="FrmDeseaAgregarClienteNuevo.cs">
       <SubType>Form</SubType>
@@ -78,11 +78,17 @@
     <Compile Include="FrmDeseaAgregarClienteNuevo.Designer.cs">
       <DependentUpon>FrmDeseaAgregarClienteNuevo.cs</DependentUpon>
     </Compile>
-    <Compile Include="FrmInformes.cs">
+    <Compile Include="FrmsConsultas\FrmInformes.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FrmInformes.Designer.cs">
+    <Compile Include="FrmsConsultas\FrmInformes.Designer.cs">
       <DependentUpon>FrmInformes.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FrmInicio.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmInicio.Designer.cs">
+      <DependentUpon>FrmInicio.cs</DependentUpon>
     </Compile>
     <Compile Include="FrmPrincipal.cs">
       <SubType>Form</SubType>
@@ -90,23 +96,23 @@
     <Compile Include="FrmPrincipal.Designer.cs">
       <DependentUpon>FrmPrincipal.cs</DependentUpon>
     </Compile>
-    <Compile Include="FrmConsultaClientes.cs">
+    <Compile Include="FrmsConsultas\FrmConsultaClientes.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FrmConsultaClientes.Designer.cs">
+    <Compile Include="FrmsConsultas\FrmConsultaClientes.Designer.cs">
       <DependentUpon>FrmConsultaClientes.cs</DependentUpon>
     </Compile>
-    <Compile Include="FrmAltaClientes.cs">
+    <Compile Include="FrmsAltas\FrmAltaCliente.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FrmAltaClientes.Designer.cs">
-      <DependentUpon>FrmAltaClientes.cs</DependentUpon>
+    <Compile Include="FrmsAltas\FrmAltaCliente.Designer.cs">
+      <DependentUpon>FrmAltaCliente.cs</DependentUpon>
     </Compile>
-    <Compile Include="FrmIngresarReservas.cs">
+    <Compile Include="FrmsAltas\FrmAltaReserva.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FrmIngresarReservas.Designer.cs">
-      <DependentUpon>FrmIngresarReservas.cs</DependentUpon>
+    <Compile Include="FrmsAltas\FrmAltaReserva.Designer.cs">
+      <DependentUpon>FrmAltaReserva.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -116,35 +122,38 @@
     <Compile Include="Proximamente.Designer.cs">
       <DependentUpon>Proximamente.cs</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="FrmAltaHabitaciones.resx">
-      <DependentUpon>FrmAltaHabitaciones.cs</DependentUpon>
+    <EmbeddedResource Include="FrmsAltas\FrmAltaHabitacion.resx">
+      <DependentUpon>FrmAltaHabitacion.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="FrmAltaHoteles.resx">
-      <DependentUpon>FrmAltaHoteles.cs</DependentUpon>
+    <EmbeddedResource Include="FrmsAltas\FrmAltaHotel.resx">
+      <DependentUpon>FrmAltaHotel.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="FrmConsultaReserva.resx">
+    <EmbeddedResource Include="FrmsConsultas\FrmConsultaReserva.resx">
       <DependentUpon>FrmConsultaReserva.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="FrmConsultarHoteles.resx">
-      <DependentUpon>FrmConsultarHoteles.cs</DependentUpon>
+    <EmbeddedResource Include="FrmsConsultas\FrmConsultarHabitaciones.resx">
+      <DependentUpon>FrmConsultarHabitaciones.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmDeseaAgregarClienteNuevo.resx">
       <DependentUpon>FrmDeseaAgregarClienteNuevo.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="FrmInformes.resx">
+    <EmbeddedResource Include="FrmsConsultas\FrmInformes.resx">
       <DependentUpon>FrmInformes.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="FrmIngresarReservas.resx">
-      <DependentUpon>FrmIngresarReservas.cs</DependentUpon>
+    <EmbeddedResource Include="FrmsAltas\FrmAltaReserva.resx">
+      <DependentUpon>FrmAltaReserva.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmInicio.resx">
+      <DependentUpon>FrmInicio.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmPrincipal.resx">
       <DependentUpon>FrmPrincipal.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="FrmConsultaClientes.resx">
+    <EmbeddedResource Include="FrmsConsultas\FrmConsultaClientes.resx">
       <DependentUpon>FrmConsultaClientes.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="FrmAltaClientes.resx">
-      <DependentUpon>FrmAltaClientes.cs</DependentUpon>
+    <EmbeddedResource Include="FrmsAltas\FrmAltaCliente.resx">
+      <DependentUpon>FrmAltaCliente.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -197,5 +206,6 @@
   <ItemGroup>
     <None Include="Resources\prox.png" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
